--- a/src/Result-Analysis.ipynb
+++ b/src/Result-Analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "id": "08566edc",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "id": "3c18f46f-c753-4fcb-922e-b939ad8ed0c0",
    "metadata": {},
    "outputs": [],
@@ -82,20 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "id": "df32b610",
    "metadata": {},
    "outputs": [],
    "source": [
     "lr = pickle.load(open('saved/LR/history.pkl', 'rb'))\n",
+    "ecc = pickle.load(open('saved/ECC/history.pkl', 'rb'))\n",
     "retain = pickle.load(open('saved/Retain/history_Retain.pkl', 'rb'))\n",
     "leap = pickle.load(open('saved/Leap/history_Leap.pkl', 'rb'))\n",
-    "gamenet = pickle.load(open('saved/GAMENet/history_GAMENet.pkl', 'rb'))"
+    "gamenet = pickle.load(open('saved/GAMENet/history_GAMENet.pkl', 'rb'))\n",
+    "safedrug = pickle.load(open('saved/SafeDrug/history_SafeDrug.pkl', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "id": "2720399e",
    "metadata": {},
    "outputs": [],
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
    "id": "b7d62331-865b-4789-80ca-378af6a79e7d",
    "metadata": {},
    "outputs": [
@@ -191,6 +193,16 @@
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>ECC</th>\n",
+       "      <td>0.4868</td>\n",
+       "      <td>0.0806</td>\n",
+       "      <td>0.7383</td>\n",
+       "      <td>0.5969</td>\n",
+       "      <td>0.6428</td>\n",
+       "      <td>0.7602</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>RETAIN</th>\n",
        "      <td>0.4711 ± 0.0140</td>\n",
        "      <td>0.0851 ± 0.0028</td>\n",
@@ -220,25 +232,39 @@
        "      <td>0.7393 ± 0.0247</td>\n",
        "      <td>25.1478 ± 1.1325</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SafeDrug</th>\n",
+       "      <td>0.5051 ± 0.0150</td>\n",
+       "      <td>0.0627 ± 0.0023</td>\n",
+       "      <td>0.6877 ± 0.0103</td>\n",
+       "      <td>0.6670 ± 0.0199</td>\n",
+       "      <td>0.6624 ± 0.0134</td>\n",
+       "      <td>0.7604 ± 0.0117</td>\n",
+       "      <td>19.3245 ± 0.5557</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 jaccard         ddi_rate            avg_p            avg_r  \\\n",
-       "LR                0.4900           0.0775           0.7227           0.6078   \n",
-       "RETAIN   0.4711 ± 0.0140  0.0851 ± 0.0028  0.6958 ± 0.0211  0.6173 ± 0.0163   \n",
-       "LEAP     0.4369 ± 0.0117  0.0689 ± 0.0028  0.6260 ± 0.0125  0.6109 ± 0.0106   \n",
-       "GAMENet  0.4790 ± 0.0260  0.0836 ± 0.0067  0.5848 ± 0.0157  0.7402 ± 0.0374   \n",
+       "                  jaccard         ddi_rate            avg_p            avg_r  \\\n",
+       "LR                 0.4900           0.0775           0.7227           0.6078   \n",
+       "ECC                0.4868           0.0806           0.7383           0.5969   \n",
+       "RETAIN    0.4711 ± 0.0140  0.0851 ± 0.0028  0.6958 ± 0.0211  0.6173 ± 0.0163   \n",
+       "LEAP      0.4369 ± 0.0117  0.0689 ± 0.0028  0.6260 ± 0.0125  0.6109 ± 0.0106   \n",
+       "GAMENet   0.4790 ± 0.0260  0.0836 ± 0.0067  0.5848 ± 0.0157  0.7402 ± 0.0374   \n",
+       "SafeDrug  0.5051 ± 0.0150  0.0627 ± 0.0023  0.6877 ± 0.0103  0.6670 ± 0.0199   \n",
        "\n",
-       "                  avg_f1            prauc               med  \n",
-       "LR                0.6470           0.7553              <NA>  \n",
-       "RETAIN   0.6337 ± 0.0129  0.7512 ± 0.0126  17.9925 ± 0.8751  \n",
-       "LEAP     0.6002 ± 0.0116  0.6467 ± 0.0068  19.1096 ± 0.1240  \n",
-       "GAMENet  0.6382 ± 0.0240  0.7393 ± 0.0247  25.1478 ± 1.1325  "
+       "                   avg_f1            prauc               med  \n",
+       "LR                 0.6470           0.7553              <NA>  \n",
+       "ECC                0.6428           0.7602              <NA>  \n",
+       "RETAIN    0.6337 ± 0.0129  0.7512 ± 0.0126  17.9925 ± 0.8751  \n",
+       "LEAP      0.6002 ± 0.0116  0.6467 ± 0.0068  19.1096 ± 0.1240  \n",
+       "GAMENet   0.6382 ± 0.0240  0.7393 ± 0.0247  25.1478 ± 1.1325  \n",
+       "SafeDrug  0.6624 ± 0.0134  0.7604 ± 0.0117  19.3245 ± 0.5557  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,9 +272,11 @@
    "source": [
     "all_d = {\n",
     "    'LR': format_flats(lr),\n",
+    "    'ECC': format_flats(ecc),\n",
     "    'RETAIN': format_stats(retain),\n",
     "    'LEAP': format_stats(leap),\n",
-    "    'GAMENet': format_stats(gamenet)\n",
+    "    'GAMENet': format_stats(gamenet),\n",
+    "    'SafeDrug': format_stats(safedrug)\n",
     "}\n",
     "        \n",
     "pd.DataFrame(all_d).T"
