--- a/src/Result-Analysis.ipynb
+++ b/src/Result-Analysis.ipynb
@@ -97,22 +97,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "id": "2720399e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'fittime': [292.9026074409485],\n",
+       "             'pretime': [352.893746137619],\n",
+       "             'jaccard': [0.48997015384454545],\n",
+       "             'ddi_rate': [0.07745666327848136],\n",
+       "             'avg_p': [0.7226821497593763],\n",
+       "             'avg_r': [0.6077673964740221],\n",
+       "             'avg_f1': [0.6470246350838804],\n",
+       "             'prauc': [0.7552892070704925]})"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# lr"
+    "lr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 104,
    "id": "54f74df7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stats(retain)"
+    "# retain"
    ]
   },
   {
@@ -147,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 105,
    "id": "b7d62331-865b-4789-80ca-378af6a79e7d",
    "metadata": {},
    "outputs": [
@@ -264,7 +283,7 @@
        "SafeDrug  0.6624 ± 0.0134  0.7604 ± 0.0117  19.3245 ± 0.5557  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +297,7 @@
     "    'GAMENet': format_stats(gamenet),\n",
     "    'SafeDrug': format_stats(safedrug)\n",
     "}\n",
-    "        \n",
+    "\n",
     "pd.DataFrame(all_d).T"
    ]
   },
